오후 0540 정래 meetup detail 수정

--- a/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
+++ b/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
@@ -269,9 +269,13 @@
         </div>
         <div class="headerRight">
             <div class="area">
-                <img src="/image/cooking1.jpg" />
-                <img src="/image/cooking2.jpg" />
-                <img src="/image/cooking3.jpg" />
+                <img src="../../../resources/css/meetup/cooking1.jpg ">
+                <img src="../../../resources/css/meetup/cooking2.jpg ">
+                <img src="../../../resources/css/meetup/cooking3.jpg ">
+
+
+
+
             </div>
         </div>
     </div>
