--- a/babmukja/src/main/webapp/WEB-INF/jsp/meetup/meetup_main.html
+++ b/babmukja/src/main/webapp/WEB-INF/jsp/meetup/meetup_main.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../../../resources/js/jquery-3.1.1.min.js"></script>
+
     <script type="text/javascript" src="/resources/js/meetup_address.js"></script>
+
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -22,7 +24,7 @@
         crossorigin="anonymous"></script>
     <!-- modal address js -->
     <script type="text/javascript" src="/resources/js/meetup_main_modal_address.js"></script>
-    <!-- main js -->
+
     <!-- maincss -->
     <link href="../../../resources/css/meetup/meetup_main.css" rel="stylesheet" type="text/css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -324,16 +326,15 @@
                         </div>
                         <!-- model tag 부분 -->
                         <div class="modal_meetup_tag_container">
-                            <div id="modal_meetup_tag">태그</div>
+                            <div class="modal_meetup_tag">태그</div>
                             <div></div>
                             <div class="modal_meetup_tag_box">
                                 <input type="text" name="meetup_tag" class="meetup_tag"
-                                    placeholder="#모임을 표현할 태그명를 입력해주세요" />
+                                    placeholder="모임을 표현할 태그명를 입력해주세요" />
                             </div>
                         </div>
-
                         <div class="modal_meetup_location_container">
-                            <div class="modal_meetup_location">활동지역</div>
+                            <div class="modal_meetup_location">지역</div>
                             <div></div>
                             <div class="modal_meetup_plus_container">
                                 <div><i class="fas fa-plus-circle" id="modal_location_plus"></i> &nbsp;&nbsp; <i
@@ -343,30 +344,6 @@
 
                             </div>
                         </div> <!-- location container 끝  -->
-
-
-                        <!-- 요일선택 부분 -->
-                        <div class="modal_meetup_day_container">
-                            <div id="modal_meetup_day">요일선택</div>
-                            <div></div>
-                            <div class="modal_meetup_day_box">
-                                <input type="checkbox" class="selectDay" id="selectMonday" name="day">
-                                <label for="selectMonday" class="select_Day_label">월</label>
-                                <input type="checkbox" class="selectDay" id="selectTuesday" name="day">
-                                <label for="selectTuesday" class="select_Day_label">화</label>
-                                <input type="checkbox" class="selectDay" id="selectWednesday" name="day">
-                                <label for="selectWednesday" class="select_Day_label">수</label>
-                                <input type="checkbox" class="selectDay" id="selectThursday" name="day">
-                                <label for="selectThursday" class="select_Day_label">목</label>
-                                <input type="checkbox" class="selectDay" id="selectFriday" name="day">
-                                <label for="selectFriday" class="select_Day_label">금</label>
-                                <input type="checkbox" class="selectDay" id="selectSaturday" name="day">
-                                <label for="selectSaturday" class="select_Day_label">토</label>
-                                <input type="checkbox" class="selectDay" id="selectSunday" name="day">
-                                <label for="selectSunday" class="select_Day_label">일</label>
-                            </div>
-                        </div>
-
                         <div class="modal_meetup_fee_container">
                             <div class="modal_meetup_fee">월 회비</div>
                             <div></div>
@@ -381,31 +358,10 @@
                             <div class="modal_meetup_mainPic">메인사진 설정</div>
                             <div></div>
                             <div class="modal_meetup_mainPic_box">
-                                <!-- 부트스트랩 적용 -->
-                                <div class="file-upload">
-                                    <button class="file-upload-btn" type="button"
-                                        onclick="$('.file-upload-input').trigger( 'click' )">사진 첨부하기</button>
 
-                                    <div class="image-upload-wrap">
-                                        <input class="file-upload-input" type='file' onchange="readURL(this);"
-                                            accept="image/*" />
-                                        <div class="drag-text">
-                                            <h3>Drag and drop a file or select add Image</h3>
-                                        </div>
-                                    </div>
-                                    <div class="file-upload-content">
-                                        <img class="file-upload-image" src="#" alt="your image" />
-                                        <div class="image-title-wrap">
-                                            <button type="button" onclick="removeUpload()" class="remove-image">삭제하기
-                                                <span class="image-title">Uploaded Image</span></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
-
-                        <!-- 모델 바디 끝  -->
-                    </div>
+                    </div><!-- 모델 바디 끝  -->
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
@@ -423,9 +379,80 @@
     <!--메인 컨테이너 끝 -->
     </div>
 
-
- 
     <script type="text/javascript" src="/resources/js/meetup_main.js"></script>
+
+    <script>
+        //모달 적용부분
+
+
+        $(".header_meetup_create").click(function () {
+            alert("modal 켜진다");
+            $("#write_modal").modal("show");
+            $("#write_modal").modal({
+                backdrop: 'static'
+            });
+        });
+
+
+        //검색창 none->block 변경 부분
+        $(".header_search").click(function () {
+
+            $(".after_click").css("display", "block");
+        });
+        $(".location_title_container").click(function () {
+            alert($(".location_position").css("display"));
+            // if (
+
+            //     $(".location_position").css("display") == "none"
+            // ) {
+            $(".location_position").css("display", "block");
+            // } else if (
+            //     $(".location_position").css("display") == "block"
+            // ) {
+            //     $(".location_position").css("display", "none");
+            // }
+
+        });
+        $(".food_type_title").click(function () {
+            $(".food_type_position").css("display", "block");
+        });
+        $(".monthly_fee_title").click(function () {
+            $(".monthly_fee_position").css("display", "block");
+        });
+
+
+        //tab 누를떄 변경부분
+        for (let i = 0; i <= 4; i++) {
+            let number = i;
+
+            $("td:eq(" + number + ")").click(function () {
+
+                $(`td`).css("background-color", "white");
+                $(`td`).css("color", "black");
+                $(".tabPanel").css("display", "none");
+                $("td:eq(" + number + ")").css("background-color", "#7db341");
+                $("td:eq(" + number + ")").css("color", "white");
+                $(".tabPanel:eq(" + number + ")").css("display", "block");
+                clearInterval(interval);
+            });
+            //이거 쓰기mouseup
+        }//for
+        var num = 0;
+        var interval = setInterval(function () {
+
+
+            $("td:eq(" + num + ")").click();
+            console.log(num);
+            num++;
+            if (num == 5) {
+                num = 0;
+            }
+        }, 1200);
+
+
+
+
+    </script>
 
 </body>
 
