정래 모임관리

--- a/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
+++ b/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
@@ -109,7 +109,7 @@
            
                 </div>
                <!--noticeList container   -->
-               <span class="writeIntro">글쓰기</span>
+               <span class="writeNotice">글쓰기</span>
 
         </div>
    <!--tab panel 끝  -->
