--- a/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
+++ b/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
@@ -13,8 +13,10 @@
 
     <title>Document</title>
     <style>
+        .host_meetup_atag{
+	text-decoration: no	
+}
         
-
     </style>
 </head>
 
