정래 메인 버그  수정

--- a/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
+++ b/babmukja/src/main/webapp/WEB-INF/jsp/meetup/detail.html
@@ -128,7 +128,29 @@
                 <div></div>
             </div>
         </div>
-        <div class="tabPanel">회원</div>
+        <div class="tabPanel">
+            <div class="detail_member_container">
+                <div class="detail_member_info">
+                    <div id="profile-picture">
+                        <img src="../../../resources//images/bottle.png">
+                    </div>
+                    <div class="detail_member_name">시골쥐</div>
+                    <div class="detail_member_regDate_container">
+                        <div>가입일</div>
+                        <div>2019년 6월 30일</div>
+                    </div>
+                    <div class="detail_member_message_container" ><i class="far fa-envelope"></i>
+
+                    </div>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                
+            </div>
+
+        </div>
 
     </div>
 
@@ -194,7 +216,7 @@
 
         $(".meetup_tag").keyup(function(event) {
     if (event.keyCode === 13) {
-        event.preventDefault;
+        event.preventDefault
     }
 });
 
